Fixed navigation styling on mobile

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -18,6 +18,14 @@ body {
     background-color: #029bab;
 }
 
+.dropdown-menu {
+    background-color: #029bab;
+}
+
+.dropdown-item {
+    color: white;
+}
+
 /* from Bulma */
 .icon {
     align-items: center;
